--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobx-react-router-view",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React routing like Vue router-view sync with your MobX state",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,8 +34,19 @@
     "typescript": "^3.6.2"
   },
   "peerDependencies": {
+    "@types/react": "^16.9.2",
     "@types/react-router": "^5.0.3",
+    "react": "^16.9.0",
+    "react-router": "^5.0.1",
     "mobx": "^5.13.0",
-    "react-router": "^5.0.1"
+    "mobx-react": "^6.1.3"
+  },
+  "dependencies": {
+    "@types/react": "^16.9.2",
+    "@types/react-router": "^5.0.3",
+    "react": "^16.9.0",
+    "react-router": "^5.0.1",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3"
   }
 }
